codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__unified_exec_footer__tests__render_many_sessions.snap
---
source: tui/src/bottom_pane/unified_exec_footer.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 1 },
    content: [
        "  后台终端运行中：123 个 · /ps 查看               ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (23, " "), (32, " "), (34, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 32, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
